--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Test App</string>
-    <string name="Hello">Olá!</string>
+    <string name="hello">Olá!</string>
+    <string name="not_all_fields_are_filled_in">Nem todos os campos estão preenchidos!</string>
+    <string name="user_is_not_found">O usuário não foi encontrado!</string>
+    <string name="incorrect_password">Senha incorreta!</string>
+
 </resources>
