--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Test App</string>
-    <string name="Hello">Привет!</string>
+    <string name="hello">Привет!</string>
+    <string name="not_all_fields_are_filled_in">Не все поля заполнены!</string>
+    <string name="user_is_not_found">Пользователь не найден!</string>
+    <string name="incorrect_password">Неправильный пароль!</string>
 </resources>
